policies/psp-pods-allowed-user-ranges.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-user-ranges
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
      ranges:
        - min: 1000
          max: 1000
    fsGroup:
      rule: MustRunAs
      ranges:
        - min: 2000
          max: 2000
